bit pattern based scheduler works now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,11 @@ include_directories(${TBB_INCLUDE_DIR})
 add_executable(CF4HepDemonstrator dependency_graph.cpp Whiteboard.cpp Context.cpp)
 target_link_libraries(CF4HepDemonstrator ${TBB_LIBRARIES})
 
-add_executable(CF4HepTaskDemonstrator taskgraph_example.cpp Whiteboard.cpp Context.cpp TaskSchedule.cpp)
-target_link_libraries(CF4HepTaskDemonstrator ${TBB_LIBRARIES})
+add_executable(CF4HepTaskGraphDemonstrator taskgraph_example.cpp Whiteboard.cpp Context.cpp TaskSchedule.cpp)
+target_link_libraries(CF4HepTaskGraphDemonstrator ${TBB_LIBRARIES})
+
+add_executable(CF4HepTaskBitsDemonstrator taskbits_example.cpp Whiteboard.cpp Context.cpp TaskSchedule.cpp)
+target_link_libraries(CF4HepTaskBitsDemonstrator ${TBB_LIBRARIES})
 
 #---Configuration-------------------------------------------------------------------
 configure_file(cmake/thisCF4Hep.csh thisCF4Hep.csh @ONLY)
