--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,13 +10,8 @@ find_package(TBB REQUIRED)
 
 #--Examples-------------------------------------------------------------------------
 include_directories(${TBB_INCLUDE_DIR})
-add_executable(CF4HepDemonstrator dependency_graph.cpp Whiteboard.cpp Context.cpp)
-target_link_libraries(CF4HepDemonstrator ${TBB_LIBRARIES})
 
-add_executable(CF4HepTaskGraphDemonstrator taskgraph_example.cpp Whiteboard.cpp Context.cpp TaskSchedule.cpp)
-target_link_libraries(CF4HepTaskGraphDemonstrator ${TBB_LIBRARIES})
-
-add_executable(CF4HepTaskBitsDemonstrator taskbits_example.cpp Whiteboard.cpp Context.cpp Scheduler.cpp)
+add_executable(CF4HepTaskBitsDemonstrator taskbits_example.cpp Whiteboard.cpp Context.cpp Scheduler.cpp AlgoPool.cpp EventLoopManager.cpp)
 target_link_libraries(CF4HepTaskBitsDemonstrator ${TBB_LIBRARIES})
 
 #---Configuration-------------------------------------------------------------------
